reset button visibility fix

--- a/css/style.css
+++ b/css/style.css
@@ -28,5 +28,5 @@ div.sq {
 }
 
 .hidden {
-  display: none;
+  visibility: hidden;
 }
